Day 5: Completed RBAC, Application Logic, and Dashboard